# Strata-Python

./: AGENTS.md  DiffTestCore.lean  README.md  StrataPython.lean  StrataTestMain.lean  lake-manifest.json  lakefile.toml
.github/: CODEOWNERS  pull_request_template.md
Python/strata-python/: PythonDialect.md  pyproject.toml
Python/strata-python/scripts/: run_cpython_tests.sh
Scripts/: pyAnalyzeLaurel.lean  pyAnalyzeLaurelToGoto.lean  pyAnalyzeToGoto.lean  pyInterpret.lean  pyResolveOverloads.lean  pySpecToLaurel.lean  pySpecs.lean  pyTranslateLaurel.lean
StrataPython/: Cli.lean  CorePrelude.lean  FunctionSignatures.lean  OverloadTable.lean  PyFactory.lean  PySpecPipeline.lean  Python.lean  PythonDialect.lean  PythonIdent.lean  PythonLaurelCorePrelude.lean  PythonLaurelTypedExpr.lean  PythonRuntimeLaurelPart.lean  PythonToCore.lean  PythonToLaurel.lean  ReadPython.lean  Specs.lean
StrataPythonTest/: .gitignore  CorePreludeTest.lean  PreludeVerifyTest.lean  PySpecArgTypeTest.lean  README.md  TestExamples.lean  ToLaurelTest.lean  normalize_labels.py  py_ion_to_cbmc.sh  run_py_analyze.sh  run_py_analyze_sarif.py  run_py_cbmc_tests.sh  run_py_interpret.sh  validate_sarif.py
StrataPythonTestExtra/: AnalyzeGoldenTest.lean  AnalyzeLaurelTest.lean  CpythonDiffTest.lean  DictNoneTest.lean  InterpretTest.lean  Issue1000Test.lean  OperatorTransTest.lean  RegexDiffTest.lean  (+6 more)
Tools/Python-base/: pyproject.toml
Tools/strata-python/: PythonDialect.md  README.md  pyproject.toml
Tools/strata-python/scripts/: gen_dialect.sh  run_cpython_tests.sh  run_test.sh
Tools/strata-python/strata/: base.py
Tools/strata-python/strata_python/: gen.py  pythonast.py
(+271 files in other folders)
