[project]
name = "strata-python"
version = "0.0.1"
description = "Python language support for Strata."
requires-python = ">= 3.11"
dependencies = [
    "strata"
]

[tool.hatch.build.targets.wheel]
packages = ["strata_python"]
# Ship the committed dialect Ion file inside the strata_python package (as
# strata_python/dialects/Python.dialect.st.ion) so consumers can locate it via
# importlib.resources without guessing a site-packages path. force-include maps
# the source dialects/ dir into the package at build time.
[tool.hatch.build.targets.wheel.force-include]
"dialects/Python.dialect.st.ion" = "strata_python/dialects/Python.dialect.st.ion"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
strata-python-gen = "strata_python.gen:main"
