[project]
name = "strata-python"
version = "0.0.1"
description = "Python language support for Strata."
requires-python = ">= 3.11"
dependencies = [
    "strata"
]

[tool.hatch.build.targets.wheel]
packages = ["strata_python"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
strata-python-gen = "strata_python.gen:main"
